--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,184 @@
 {% extends 'base.html' %}
 {% block content %}
     <h2>About Page</h2>
+
+        <p>
+            The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in recapturing his long lost family 
+            inheritance. Remembering that he had once known an adventurous Hobbit on his travels in The Shire, Gandalf decided to add Bilbo to their company because 
+            he knew that stealth and cunning were preferable to force. Gandalf also believed that someone like Bilbo could keep the sometimes prideful and stubborn 
+            Dwarves from rash action. The superstitious Dwarves also considered thirteen to be an unlucky number, and as Gandalf had planned to leave on other business, 
+            welcomed a fourteenth to fill in to their party.
+        </p>
+
+    <div class="row featurette">
+    <div class="col-md-7">
+        <h3>Thorin Oakenshield</h3>
+        <p>Thorin II, also called the Oakenshield, King under the Mountain or the Mountain King, was the son of Thráin II, the older brother of Frerin and Dís, 
+        the grandson of King Thrór and the uncle of Fíli and Kíli. Thorin was best known for his deeds as leader of a company that infiltrated the lost Kingdom 
+        under the Mountain to take it back from Smaug and for leading an alliance of Men, Dwarves, and Elves in the Battle of the Five Armies.</p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://gratianads90.files.wordpress.com/2018/08/thorin-2012-richardarmitage-asthaujx-king-crop-smouldering-glare_jul0117viaangelika.jpg" alt="Generic placeholder image">
+    </div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="http://www.filmofilia.com/wp-content/uploads/2011/07/hobbit_0.jpg" alt="Generic placeholder image">
+    </div>
+
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Kili &amp; Fili</h3>
+        <p class="lead">Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother Dís. They were also nephews of Frerin, grandsons of Thráin 
+        II, and great-grandsons of Thrór. Fíli's most distinguishing feature was his long nose, the longest of any of the Dwarves in Thorin's company.</p>
+    </div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Óin</h3>
+        <p class="lead">Óin was the older brother of Glóin, cousin of Dwalin and Balin, and uncle of Gimli. He usually wore a brown-hooded cloak when travelling. 
+        Óin fought in the Battle of Azanulbizar along with Thorin Oakenshield, and in TA 2941 joined with Thorin and Company on the quest to reclaim the Lonely 
+        Mountain wearing a brown hood.[2] Óin was one of the Dwarves who bet that Bilbo would come along with them to reclaim the Lonely Mountain. Óin and his 
+        brother Glóin were usually in charge of preparing the fire for the Company. He fought in and survived the Battle of the Five Armies, and later settled 
+        in the Lonely Mountain along with many other dwarves of The Company of Thorin.</p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://images.tvnz.co.nz/tvnz_images/hobbit_news/2012/10/dwarf_oin_hobbit_E1.jpg" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+     <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/f/fc/Gloin_2.jpg/revision/latest/scale-to-width-down/340?cb=20120908171710" alt="Generic placeholder image">
+    </div>
+
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Gloin</h3>
+        <p class="lead">Glóin son of Gróin was one of the Dwarves of Thorin II Oakenshield's company who set out to reclaim the Lonely Mountain in the Quest of Erebor. 
+        He was also the father of Gimli, who became a member of the Fellowship of the Ring.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Balin</h3>
+        <p class="lead">Balin was a Dwarf leader, the son of Fundin, and elder brother of Dwalin. He was one of the thirteen Dwarves who accompanied Thorin II Oakenshield 
+        on the quest to regain the Lonely Mountain.</p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/5/52/Balin.jpg/revision/latest/top-crop/width/360/height/450?cb=20120911171656" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+     <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/1/1c/Dwalin.jpg/revision/latest/top-crop/width/360/height/450?cb=20120911200601" alt="Generic placeholder image">
+    </div>
+
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Dwalin</h3>
+        <p class="lead">Born in TA 2772, two years after the dragon Smaug had desolated Erebor, Dwalin was the son of Fundin and younger brother of Balin. After fighting 
+        in the Battle of Azanulbizar at the age of 27, Dwalin accompanied Thrain the Second and Thorin Oakenshield to settle peacefully in the northern Ered Luin.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Ori</h3>
+        <p class="lead">Ori was a member of Thorin's Company of Dwarves and participated in the Quest of Erebor, as well as fighting in and surviving the Battle of Five Armies. 
+        He, along with his cousins Dori and Nori,[2] were remote kinsmen of Thorin II Oakenshield.</p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg/revision/latest?cb=20130205205637" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+     <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/2/27/Mark_Hadlow_as_Dori.jpg/revision/latest?cb=20121030113353" alt="Generic placeholder image">
+    </div>
+
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Dori</h3>
+        <p class="lead">Dori was a Dwarf of Durin's Folk, who, along with his brother Nori and cousin Ori,[1] travelled with Bilbo Baggins and Thorin Oakenshield as a member of 
+        Thorin's Company on the Quest for Erebor, to reclaim the Lonely Mountain from the dragon Smaug.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Nori</h3>
+        <p class="lead">Nori was a Dwarf of Durin's Folk. He had a brother named Dori as well as a cousin named Ori,[1] and was a remote kinsman of Thorin Oakenshield. His hood was purple, 
+        he played the flute, and he was very fond of regular and plentiful meals like his hobbit friend, Bilbo Baggins.</p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/d/db/Nori-jedbrophy-p.jpg/revision/latest/window-crop/width/200/x-offset/0/y-offset/0/window-width/432/window-height/432?cb=20120107053122" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+     <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/b/b5/Bifur.jpg/revision/latest?cb=20110731144825" alt="Generic placeholder image">
+    </div>
+
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Bifur</h3>
+        <p class="lead">Bifur was a Dwarf of the late-Third Age. He is best known for being a companion to Bilbo Baggins and Thorin Oakenshield on the quest to regain the Lonely Mountain, 
+        along with his cousins Bofur and Bombur.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Bofur</h3>
+        <p class="lead">Bofur was a Dwarf of the late-Third Age. He is best known for being companions to Bilbo Baggins, Thorin Oakenshield and Gandalf on the quest to reclaim Lonely Mountain 
+        from the dragon Smaug, along with his brother Bombur and cousin Bifur.</p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/7/77/Bofur.jpg/revision/latest?cb=20110731144758" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+     <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/5/5f/Bombur-stephenhunter-p.jpg/revision/latest/scale-to-width-down/350?cb=20120107054531" alt="Generic placeholder image">
+    </div>
+
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Bombur</h3>
+        <p class="lead">Bombur was a Dwarf who accompanied Thorin Oakenshield and Bilbo Baggins on their journey to the Lonely Mountain as part of the company, alongside his brother Bofur and 
+        cousin Bifur. Bombur was noted as the fattest Dwarf in the company.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Gandalf</h3>
+        <p class="lead">Gandalf (Norse; IPA: [gand:alf] - "Elf of the Wand" or "Wand-elf") the Grey, later known as Gandalf the White, and originally named Olórin (Quenya; IPA: [oˈloːrin] - "Dreamer" or "Of Dreams"), 
+        was an Istar (Wizard), sent to Middle-earth in the Third Age to combat the threat of Sauron. He joined Thorin and his company to reclaim the Lonely Mountain from Smaug, convoked the Fellowship of the Ring to 
+        destroy the One Ring, and led the Free Peoples in the final campaign of the War of the Ring.</p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg/revision/latest/scale-to-width-down/350?cb=20121110131754" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
 {% endblock %}
