--- a/templates/about.html
+++ b/templates/about.html
@@ -7,17 +7,33 @@
     also considered thirteen to be an unlucky number, and as Gandalf had planned to leave on other business, welcomed a fourteenth to fill in to their party.</p>
 
 {% for member in company_data %}
-
+    {% if loop.index % 2 != 0 %}
 <div class="row featurette">
     <div class="col-md-7">
-        <h3>{{ member.name }}</h3>
+        <h3>{{ loop.index }} {{ member.name }}</h3>
         <p>{{ member.description }}</p>
     </div>
     <div class="col-md-5">
         <img class="featurette-image img-responsive" src="{{ member.image_source }}" alt="Picture of {{ member.name }}">
     </div>
 </div>
+
+{% else %}
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="{{ member.image_source }}" alt="Picture of {{ member.name }}">
+    </div>
+     <div class="col-md-7">
+        <h3>{{ loop.index }} {{ member.name }}</h3>
+        <p>{{ member.description }}</p>
+    </div>
+</div>
+{% endif %}
+
+{% if loop.index != 13 %}
 <hr class="featurette-divider"> 
+{% endif %}
 
 {% endfor %} 
 {% endblock %}
